Added openapi model for /create-game, fixed traffic for it too
