# matchmaker/src/main/java/dev/totallyspies/spydle/matchmaker/service/GameServerInfo.java
@@ -1,5 +1,6 @@
 package dev.totallyspies.spydle.matchmaker.service;
 
+import dev.totallyspies.spydle.matchmaker.generated.model.GameServerInfoModel;
 import lombok.Data;
 import lombok.ToString;
 
@@ -13,5 +14,9 @@ public class GameServerInfo {
     private String address;
     private int port;
     private String gameServerName;
+
+    public GameServerInfoModel toModel() {
+        return new GameServerInfoModel().gameServerName(gameServerName).address(address).port(port);
+    }
 
 }
